@@ -5,24 +5,26 @@ import com.sprint.mission.discodeit.dto.command.user.UserCreateCommand;
 import com.sprint.mission.discodeit.dto.command.user.UserUpdateCommand;
 import com.sprint.mission.discodeit.dto.user.UserDto;
 import com.sprint.mission.discodeit.entity.BinaryContent;
+import com.sprint.mission.discodeit.entity.Role;
 import com.sprint.mission.discodeit.entity.User;
-import com.sprint.mission.discodeit.entity.UserStatus;
 import com.sprint.mission.discodeit.exception.user.UserAlreadyExistsException;
 import com.sprint.mission.discodeit.exception.user.UserNotFoundException;
 import com.sprint.mission.discodeit.mapper.UserMapper;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
-import com.sprint.mission.discodeit.repository.UserStatusRepository;
+import com.sprint.mission.discodeit.security.SessionManager;
 import com.sprint.mission.discodeit.service.UserService;
 import com.sprint.mission.discodeit.storage.BinaryContentStorage;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.parameters.P;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -32,11 +34,12 @@ import java.util.stream.Collectors;
 public class BasicUserService implements UserService {
 
     private final UserRepository userRepository;
-    private final UserStatusRepository userStatusRepository;
     private final BinaryContentRepository binaryContentRepository;
     private final ReadStatusRepository readStatusRepository;
     private final UserMapper userMapper;
     private final BinaryContentStorage binaryContentStorage;
+    private final PasswordEncoder passwordEncoder;
+    private final SessionManager  sessionManager;
 
 
     @Override
@@ -58,18 +61,16 @@ public class BasicUserService implements UserService {
         //프로필 이미지 처리
         BinaryContent profile = null;
         if (profileRequest != null) {
-             profile = new BinaryContent(profileRequest.fileName(),
-                    profileRequest.fileSize(), profileRequest.contentType());
-            binaryContentRepository.save(profile);
+            profile = binaryContentRepository.save(new BinaryContent(
+                    profileRequest.fileName(), profileRequest.fileSize(), profileRequest.contentType()));
             binaryContentStorage.put(profile.getId(), profileRequest.bytes());
         }
-        User user = new User(command.username(), command.email(), command.password(), profile, null);
+        String encodedPassword = passwordEncoder.encode(command.password());
+        User user = new User(command.username(), command.email(), encodedPassword, Role.USER, profile);
         userRepository.save(user);
 
-        UserStatus userStatus = new UserStatus(user);
-        userStatusRepository.save(userStatus);
         log.info("유저 생성 완료 - name: {}, userId: {}", command.username(),  user.getId());
-        return  userMapper.toDto(user, userStatus);
+        return  userMapper.toDto(user, false);
 
     }
 
@@ -79,12 +80,9 @@ public class BasicUserService implements UserService {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> UserNotFoundException.withId(userId));
 
-        UserStatus userStatus = userStatusRepository.findByUserId(userId)
-                .orElse(null);
-
         log.debug("유저 조회 - name: {}", user.getUsername());
 
-        return userMapper.toDto(user, userStatus);
+        return userMapper.toDto(user, sessionManager.isOnline(userId));
     }
 
     @Transactional(readOnly = true)
@@ -95,32 +93,31 @@ public class BasicUserService implements UserService {
             return  new ArrayList<>();
         }
         log.debug("전체 유저 조회 완료 - 총 {}명", users.size());
-        return  users.stream()
-                .map(user -> {
-                    UserStatus userStatus = userStatusRepository.findByUserId(user.getId())
-                            .orElse(null);
-                    return userMapper.toDto(user, userStatus);
-                })
-                .collect(Collectors.toList());
+        return users.stream()
+                .map(user -> userMapper.toDto(user, sessionManager.isOnline(user.getId())))
+                .toList();
     }
 
     @Override
+    @PreAuthorize("principal.userDto.id().equals(#userId)")
     public UserDto updateUser(UUID userId, UserUpdateCommand command, BinaryContentCreateCommand profileRequest) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> UserNotFoundException.withId(userId));
 
         //프로필 이미지 선택적 처리
         if (profileRequest != null) {
-            if (user.getProfile() != null){
-                binaryContentRepository.deleteById(user.getProfile().getId());
-            }
+            BinaryContent oldProfile = user.getProfile();
 
-            BinaryContent profile = new BinaryContent(
-                    profileRequest.fileName(), profileRequest.fileSize(), profileRequest.contentType());
-            binaryContentRepository.save(profile);
+            BinaryContent profile = binaryContentRepository.save(new BinaryContent(
+                    profileRequest.fileName(), profileRequest.fileSize(), profileRequest.contentType()));
             binaryContentStorage.put(profile.getId(), profileRequest.bytes());
             user.updateUserProfileId(profile);
+
+            if (oldProfile != null) {
+                binaryContentRepository.delete(oldProfile);
+            }
         }
+
         if (command.newUsername() != null) {
             if (userRepository.existsByUsername(command.newUsername())){
                 log.warn("이름 변경 실패 - 중복된 username: {}", command.newUsername());
@@ -138,29 +135,41 @@ public class BasicUserService implements UserService {
         }
 
         if (command.newPassword() != null)
-            user.updateUserPassword(command.newPassword());
+            user.updateUserPassword(passwordEncoder.encode(command.newPassword()));
         userRepository.save(user);
-
-        UserStatus userStatus = userStatusRepository.findByUserId(userId)
-                .orElse(null);
-        if (userStatus == null){
-             userStatus = new UserStatus(user);
-        }
 
         log.info("유저 수정 완료 -  name: {}, userId: {}", user.getUsername(), user.getId());
 
-        return userMapper.toDto(user, userStatus);
+        return userMapper.toDto(user, sessionManager.isOnline(userId));
     }
 
     @Override
+    @PreAuthorize("principal.userDto.id().equals(#userId)")
     public void deleteUser(UUID userId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(()->UserNotFoundException.withId(userId));
-        if (user.getProfile() != null){
-            binaryContentRepository.delete(user.getProfile());
-        }
+        BinaryContent profile = user.getProfile();
         readStatusRepository.deleteByUserId(userId);
-        userRepository.deleteById(userId);
+        userRepository.delete(user);
+        if (profile != null) {
+            binaryContentRepository.delete(profile);
+        }
+        sessionManager.invalidateSessions(userId);
         log.info("유저 삭제 - name: {}, userId: {}", user.getUsername(), user.getId());
+    }
+
+    @PreAuthorize("hasRole('ADMIN')")
+    @Override
+    public UserDto updateRole(UUID userId, Role newRole) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> UserNotFoundException.withId(userId));
+        user.updateRole(newRole);
+        userRepository.save(user);
+
+        sessionManager.invalidateSessions(userId);
+
+        log.info("권한 수정 완료 - userId: {}, newRole: {}", user.getId(), newRole);
+
+        return userMapper.toDto(user, false);
     }
 }
